# pingouin

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CNAME  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  README.rst  TODO  appveyor.yml  codecov.yml  pingouin.todo  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: coverage.yml  deploy_doc.yml  deploy_stable_doc.yml  doc.yml  docs-test.yml  documentation.yml  pytest.yml  pytest_prerelease.yml  python_tests.yml  ruff.yml  test.yml
.pytest_cache/v/cache/: nodeids
JOSS/: paper.bib  paper.md
binder/: requirements.txt
docs/: Makefile  api.rst  changelog.rst  changelog_futur.rst  citing.rst  conf.py  contributing.rst  documentation.rst  examples.rst  faq.rst  guidelines.rst  index.html  index.rst  make.bat  pingouin.rst  switcher.json
docs/_static/: style.css
docs/_static/css/: custom.css  style.css
docs/examples/: effect_size.ipynb  effect_size.rst  one_way_anova.rst  pairwise_corr.rst  pairwise_ttests.ipynb
examples/: examples_anova.py  examples_effsize.py  examples_multicomp.py  examples_pairwise_ttests.py  examples_parametric.py  examples_rm_anova.py  generate_dataset.py  sleep_dataset.csv  sleep_dataset_reshaped.csv
examples/jasp_datasets/: Big5.csv
notebooks/: 00_QuickStart.ipynb  01_ANOVA.ipynb  02_BayesianTTests.ipynb  03_EffectSizes.ipynb  04_Correlations.ipynb  05_CircularStatistics.ipynb  06_Others.ipynb  06_Rounding.ipynb  10_CircularStatistics.ipynb  mixed_anova.csv
pingouin/: __init__.py  bayesian.py  circular.py  config.py  contingency.py  correlation.py  distribution.py  effsize.py  equivalence.py  multicomp.py  multivariate.py  nonparametric.py  pairwise.py  pandas.py  parametric.py  pingouin.py  plotting.py  power.py  regression.py  reliability.py  testing.py  utils.py
pingouin/datasets/: .Rhistory  __init__.py  ancova.csv  anova2_unbalanced.csv  anova3.csv  berens2009.csv  chi2_mcnemar.csv  cronbach_wide_missing.csv  datasets.csv  datasets.md  icc.csv  mcclave1991.csv  mediation.csv  mixed_anova.csv  mixed_anova_unbalanced.csv  penguins.csv  rm_anova.csv  ryan2013.csv
pingouin/tests/: _tests_pingouin.py  test_bayesian.py  test_circular.py  test_config.py  test_contingency.py  test_correlation.R  test_correlation.py  test_distribution.py  test_effsize.py  test_equivalence.py  test_multicomp.py  test_multivariate.py  test_nonparametric.py  test_pairwise.py  test_pandas.py  test_parametric.py  test_plotting.py  test_power.py  test_regression.py  test_reliability.py  test_utils.py
src/pingouin/: __init__.py  bayesian.py  circular.py  config.py  contingency.py  correlation.py  distribution.py  effsize.py  equivalence.py  multicomp.py  multivariate.py  nonparametric.py  pairwise.py  parametric.py  plotting.py  power.py  regression.py  reliability.py  utils.py
src/pingouin/datasets/: __init__.py  ancova.csv  anova2.csv  anova3_unbalanced.csv  blandaltman.csv  chi2_mcnemar.csv  cochran.csv  cronbach_alpha.csv  multivariate.csv  pairwise_corr.csv  pairwise_tests.csv  pairwise_tests_missing.csv  partial_corr.csv  penguins.csv  rm_anova2.csv  rm_anova_wide.csv  rm_corr.csv  rm_missing.csv
tests/: test_bayesian.py  test_circular.py  test_config.py  test_contingency.py  test_correlation.py  test_distribution.py  test_effsize.py  test_equivalence.py  test_multicomp.py  test_multivariate.py  test_nonparametric.py  test_pairwise.py  test_pandas.py  test_parametric.py  test_plotting.py  test_power.py  test_regression.py  test_reliability.py  test_utils.py
